@@ -172,8 +172,9 @@ public class RuleController {
 	@RequestMapping(value = "/saveRule", method = RequestMethod.POST)
 	public String saveRule(@ModelAttribute("rule") @Valid Rule rule,
 			BindingResult result, Model model, RedirectAttributes redirectAttributes,
-			@RequestParam("action") String action, @RequestParam("reportId") Integer reportId,
-			@RequestParam("returnReportId") Integer returnReportId,
+			@RequestParam("action") String action,
+			@RequestParam(value = "reportId", required = false) Integer reportId,
+			@RequestParam(value = "returnReportId", required = false) Integer returnReportId,
 			HttpSession session) {
 
 		logger.debug("Entering saveRule: rule={}, action='{}',"
