@@ -1,5 +1,6 @@
 ART 5.7
 * Allow having signature in email inline jobs
+* Fix for error when adding a report parameter
 
 ART 5.6
 * Added jasperreports-functions jar
